items tags spacing fix

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -70,9 +70,10 @@ body {
     color: #444;
 }
 
-.check-item p.tag {
+.check-item p.tags span.tag {
     color: #aaa;
     font-size: 0.8em;
+    margin-right: 2em;
 }
 
 .score {
